syntax = "proto3";

package api;
option go_package = "webitel.go/api;api";

// 
message ObjectId {

    int64  id = 1;   // identifier
    string name = 2; // display name
}